--- a/match.html.html
+++ b/match.html.html
@@ -22,10 +22,10 @@
 <h2 class="text-white text-xl font-bold leading-tight">Sports Hub</h2>
 </div>
 <nav class="flex items-center gap-6">
-<a class="text-white text-base font-medium leading-normal hover:text-[var(--primary-color)] transition-colors" href="#">Home</a>
-<a class="text-white text-base font-medium leading-normal hover:text-[var(--primary-color)] transition-colors" href="#">Matches</a>
-<a class="text-white text-base font-medium leading-normal hover:text-[var(--primary-color)] transition-colors" href="#">Teams</a>
-<a class="text-white text-base font-medium leading-normal hover:text-[var(--primary-color)] transition-colors" href="#">News</a>
+<a class="text-white text-base font-medium leading-normal hover:text-[var(--primary-color)] transition-colors" href="index.html">Home</a>
+<a class="text-white text-base font-medium leading-normal hover:text-[var(--primary-color)] transition-colors" href="match.html">Matches</a>
+<a class="text-white text-base font-medium leading-normal hover:text-[var(--primary-color)] transition-colors" href="teams.html">Teams</a>
+<a class="text-white text-base font-medium leading-normal hover:text-[var(--primary-color)] transition-colors" href="news.html">News</a>
 </nav>
 </div>
 <div class="flex items-center gap-4">
@@ -42,9 +42,9 @@
 <main class="flex flex-1 justify-center py-8">
 <div class="layout-content-container w-full max-w-5xl px-4">
 <div class="flex items-center gap-2 text-sm text-[#A2C398] mb-6">
-<a class="hover:text-white" href="#">Matches</a>
+<a class="hover:text-white" href="match.html">Matches</a>
 <span>/</span>
-<a class="hover:text-white" href="#">Live</a>
+<a class="hover:text-white" href="live.html">Live</a>
 <span>/</span>
 <span class="text-white">Real Madrid vs. FC Barcelona</span>
 </div>
