--- a/news.html.html
+++ b/news.html.html
@@ -23,12 +23,12 @@
 <h2 class="text-white text-xl font-bold leading-tight tracking-[-0.015em]">Sports Hub</h2>
 </div>
 <nav class="flex items-center gap-6">
-<a class="text-gray-300 hover:text-white text-base font-medium leading-normal transition-colors" href="#">Home</a>
-<a class="text-gray-300 hover:text-white text-base font-medium leading-normal transition-colors" href="#">Scores</a>
-<a class="text-white text-base font-bold leading-normal" href="#">News</a>
-<a class="text-gray-300 hover:text-white text-base font-medium leading-normal transition-colors" href="#">Standings</a>
-<a class="text-gray-300 hover:text-white text-base font-medium leading-normal transition-colors" href="#">Stats</a>
-<a class="text-gray-300 hover:text-white text-base font-medium leading-normal transition-colors" href="#">Videos</a>
+<a class="text-gray-300 hover:text-white text-base font-medium leading-normal transition-colors" href="index.html">Home</a>
+<a class="text-gray-300 hover:text-white text-base font-medium leading-normal transition-colors" href="scores.html">Scores</a>
+<a class="text-white text-base font-bold leading-normal" href="news.html">News</a>
+<a class="text-gray-300 hover:text-white text-base font-medium leading-normal transition-colors" href="standings.html">Standings</a>
+<a class="text-gray-300 hover:text-white text-base font-medium leading-normal transition-colors" href="stats.html">Stats</a>
+<a class="text-gray-300 hover:text-white text-base font-medium leading-normal transition-colors" href="videos.html">Videos</a>
 </nav>
 </div>
 <div class="flex flex-1 items-center justify-end gap-4">
