--- a/profile.html.html
+++ b/profile.html.html
@@ -28,23 +28,23 @@
 <h1 class="text-white text-lg font-bold">Sports Hub</h1>
 </div>
 <nav class="flex flex-col gap-2 flex-grow">
-<a class="flex items-center gap-3 px-4 py-2 text-zinc-300 hover:text-white hover:bg-[#2e4328]/50 rounded-full transition-colors" href="#">
+<a class="... transition-colors" href="index.html">
 <span class="material-symbols-outlined">home</span>
 <span class="text-sm font-medium">Home</span>
 </a>
-<a class="flex items-center gap-3 px-4 py-2 text-zinc-300 hover:text-white hover:bg-[#2e4328]/50 rounded-full transition-colors" href="#">
+<a class="... transition-colors" href="match.html">
 <span class="material-symbols-outlined">sports_esports</span>
 <span class="text-sm font-medium">Matches</span>
 </a>
-<a class="flex items-center gap-3 px-4 py-2 text-zinc-300 hover:text-white hover:bg-[#2e4328]/50 rounded-full transition-colors" href="#">
+<a class="... transition-colors" href="teams.html">
 <span class="material-symbols-outlined">groups</span>
 <span class="text-sm font-medium">Teams</span>
 </a>
-<a class="flex items-center gap-3 px-4 py-2 text-zinc-300 hover:text-white hover:bg-[#2e4328]/50 rounded-full transition-colors" href="#">
+<a class="... transition-colors" href="news.html">
 <span class="material-symbols-outlined">newspaper</span>
 <span class="text-sm font-medium">News</span>
 </a>
-<a class="flex items-center gap-3 px-4 py-2 text-white bg-[var(--primary-color)] rounded-full" href="#">
+<a class="... rounded-full" href="settings.html">
 <span class="material-symbols-outlined" style="font-variation-settings: 'FILL' 1;">settings</span>
 <span class="text-sm font-medium">Settings</span>
 </a>
