All files created with working code and links

--- a/news.html.html
+++ b/news.html.html
@@ -1,15 +1,17 @@
-<html><head>
+<!DOCTYPE html>
+<html>
+<head>
 <link crossorigin="" href="https://fonts.gstatic.com/" rel="preconnect"/>
-<link as="style" href="https://fonts.googleapis.com/css2?display=swap&amp;family=Manrope%3Awght%40400%3B500%3B700%3B800&amp;family=Noto+Sans%3Awght%40400%3B500%3B700%3B900" onload="this.rel='stylesheet'" rel="stylesheet"/>
+<link as="style" href="https://fonts.googleapis.com/css2?display=swap&family=Manrope%3Awght%40400%3B500%3B700%3B800&family=Noto+Sans%3Awght%40400%3B500%3B700%3B900" onload="this.rel='stylesheet'" rel="stylesheet"/>
 <meta charset="utf-8"/>
 <title>Stitch Design</title>
 <link href="data:image/x-icon;base64," rel="icon" type="image/x-icon"/>
 <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
 <style type="text/tailwindcss">
-      :root {
-        --primary-color: #53d22d;
-      }
-    </style>
+:root {
+ --primary-color: #53d22d;
+}
+</style>
 </head>
 <body class="bg-[#111827]">
 <div class="relative flex size-full min-h-screen flex-col dark group/design-root overflow-x-hidden" style='font-family: Manrope, "Noto Sans", sans-serif;'>
@@ -24,11 +26,9 @@
 </div>
 <nav class="flex items-center gap-6">
 <a class="text-gray-300 hover:text-white text-base font-medium leading-normal transition-colors" href="index.html">Home</a>
-<a class="text-gray-300 hover:text-white text-base font-medium leading-normal transition-colors" href="scores.html">Scores</a>
+<a class="text-gray-300 hover:text-white text-base font-medium leading-normal transition-colors" href="match.html">Matches</a>
 <a class="text-white text-base font-bold leading-normal" href="news.html">News</a>
-<a class="text-gray-300 hover:text-white text-base font-medium leading-normal transition-colors" href="standings.html">Standings</a>
-<a class="text-gray-300 hover:text-white text-base font-medium leading-normal transition-colors" href="stats.html">Stats</a>
-<a class="text-gray-300 hover:text-white text-base font-medium leading-normal transition-colors" href="videos.html">Videos</a>
+<a class="text-gray-300 hover:text-white text-base font-medium leading-normal transition-colors" href="profile.html">Profile</a>
 </nav>
 </div>
 <div class="flex flex-1 items-center justify-end gap-4">
@@ -60,11 +60,11 @@
 <div class="flex flex-col items-start justify-end bg-center bg-no-repeat bg-cover rounded-2xl min-h-[400px] p-6 relative group" style='background-image: linear-gradient(to top, rgba(0,0,0,0.7) 20%, transparent), url("https://lh3.googleusercontent.com/aida-public/AB6AXuCwE5dZqk-IyPwaN4JvebTFAyhDo2jAdfSyw0Mugz0IOH0CYwauk0pNM5KqvFpWhm72AITi1hXgm-WYE6fV9ZSYCpbIiXTm0sNGL14gquX-o__XkWqeibAVjH4wmn-TK9dHWlF94WelfnOqY_TSlSTXECbRH9vH6_LPnugiCjsB44ma1izP8wEsvBHBjratYMGiZKz7lVyf2aNb3Z1a0a2rzqDJvaTYTxxzmiDwnbBwjNWtM0FS12XZ2iHkNeemmAqPzs34pQdcBUk");'>
 <div class="flex flex-col gap-2">
 <p class="text-white text-2xl font-bold leading-tight tracking-[-0.015em] group-hover:text-[var(--primary-color)] transition-colors">
-                    The Rise of the Underdogs: How Smaller Teams Are Shaking Up the League
-                  </p>
+The Rise of the Underdogs: How Smaller Teams Are Shaking Up the League
+ </p>
 <p class="text-gray-300 text-base font-normal leading-normal">
-                    A deep dive into the strategies and key players behind the unexpected success of several underdog teams this season.
-                  </p>
+ A deep dive into the strategies and key players behind the unexpected success of several underdog teams this season.
+ </p>
 <p class="text-gray-400 text-sm font-normal leading-normal">By Alex Turner · 2d ago</p>
 </div>
 </div>
@@ -73,44 +73,44 @@
 <div class="w-full bg-center bg-no-repeat aspect-video bg-cover" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuDq6Fzf7DgcEMmT-Lnae0rt6rsgz5VqNBYJ3yi5kbxgYImPxQqrK3dOcpq_WSGToWpNqolvcab5YE_g33qJwQ4w9iM1mN6YdZdh0mBBxjQYX99mi-o9D6wRNrIxA7J55wmJxye5c-dfxLBPHQBbXS6OlNeq2P-wUCzW0-z7mDfKEnQLUjqMsZUY6Cf5wLbugNa64C0CGtVLomvBX6-RD7S6ocfjEubtRmGFzWuFHdWzuQ2xes9XDpELoKuTet0xwURRAPUkzy7UwUs");'></div>
 <div class="flex flex-col gap-1.5 p-4 pt-0">
 <p class="text-white text-base font-bold leading-tight group-hover:text-[var(--primary-color)] transition-colors">
-                      Game Recap: The Thrilling Showdown Between the Titans and the Falcons
-                    </p>
+ Game Recap: The Thrilling Showdown Between the Titans and the Falcons
+</p>
 <p class="text-gray-400 text-sm font-normal leading-normal">
-                      A blow-by-blow account of last night's epic match, filled with unexpected twists.
-                    </p>
+ A blow-by-blow account of last night's epic match, filled with unexpected twists.
+ </p>
 </div>
 </div>
 <div class="flex flex-col gap-4 rounded-2xl overflow-hidden bg-[#1f2937] group">
 <div class="w-full bg-center bg-no-repeat aspect-video bg-cover" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuAs_HrHYJ2iSOiNSIYMWa0BX3dsRW23iHrV6gKvOD7VCWnJmH4stfMtNTTkKarwCyn6pSAfO_qF4XXlX9MR6mvivbPui7lLyVgt9am15bd6NvdD_WHN-z56DhshPxON6HCKAyJC8Bdyh1eTlfT8iUbJ4-8wANtFnS0Y9VC2jHCIjHOBZ5s5gmOc1un-RXLaOpBxvxFEJd7l3Mh8qKLoXIjPyYMUQZXaVwbKqgtSyqvdxaHd261Xge4jiqtS5dUipkgCCcyiJYCuDR0");'></div>
 <div class="flex flex-col gap-1.5 p-4 pt-0">
 <p class="text-white text-base font-bold leading-tight group-hover:text-[var(--primary-color)] transition-colors">
-                      Player Spotlight: Sophia Rodriguez's Journey to the Top
-                    </p>
+ Player Spotlight: Sophia Rodriguez's Journey to the Top
+ </p>
 <p class="text-gray-400 text-sm font-normal leading-normal">
-                      An inspiring story of perseverance and talent, tracing the path of Sophia Rodriguez.
-                    </p>
+ An inspiring story of perseverance and talent, tracing the path of Sophia Rodriguez.
+ </p>
 </div>
 </div>
 <div class="flex flex-col gap-4 rounded-2xl overflow-hidden bg-[#1f2937] group">
 <div class="w-full bg-center bg-no-repeat aspect-video bg-cover" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuBs4YadM1glITgYQERy0KVONnuJFWr-zeAI7VijBpaWj_caAJrSuN65zGMX9HF8xsYX_I19U3ExWDjcal_3j3bmg1hvXA4RoOpYqPhpRWlEByNDgGF-9K1XuD5aLLq_SVfT2H3RR94HJhzb2HXoQjBPOuI68dJ_g_PN3Qgd-61lH-Vs811wTqrNIr00KmziLjEhbqnRzJl3DfidjUs0WwBYG5K-0vR0WDZw6jRjs5qiP4x3TMp04-HDplPsdCfvNLM-8HpEfkCLFyM");'></div>
 <div class="flex flex-col gap-1.5 p-4 pt-0">
 <p class="text-white text-base font-bold leading-tight group-hover:text-[var(--primary-color)] transition-colors">
-                      Analysis: Tactical Breakdown of the Champions' Winning Strategy
-                    </p>
+Analysis: Tactical Breakdown of the Champions' Winning Strategy
+ </p>
 <p class="text-gray-400 text-sm font-normal leading-normal">
-                      Experts dissect the tactical nuances that led the champions to victory, highlighting key plays.
-                    </p>
+ Experts dissect the tactical nuances that led the champions to victory, highlighting key plays.
+ </p>
 </div>
 </div>
 <div class="flex flex-col gap-4 rounded-2xl overflow-hidden bg-[#1f2937] group">
 <div class="w-full bg-center bg-no-repeat aspect-video bg-cover" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuB9q9xqZ5zftXp3BFdWYO9hasSrBPNq3zrGqpEJojSbidagEwjLi_0_LOoXRK5EypRaTp05R0dSfv2zyVHjmp29NmZAI0OOEb8rgJOHHrkkLHw7yv7qoj7xfKEYxqitiKP9Vx5Z8-CymWJJ22VROSY63jyTYmoqB4386I9RjUyE2EHrl9m-e25UEswF2IJI7c4tP-6ZNygkioPR862jxO_juPl0BINRc40PeN7dVctvKOkEFvsJJfauTKzLJGlyn9nT56-5H6W1aNc");'></div>
 <div class="flex flex-col gap-1.5 p-4 pt-0">
 <p class="text-white text-base font-bold leading-tight group-hover:text-[var(--primary-color)] transition-colors">
-                      Injury Updates: Key Players' Return Dates and Impact
-                    </p>
+ Injury Updates: Key Players' Return Dates and Impact
+ </p>
 <p class="text-gray-400 text-sm font-normal leading-normal">
-                      Stay informed on the latest injury reports, including expected return dates.
-                    </p>
+ Stay informed on the latest injury reports, including expected return dates.
+</p>
 </div>
 </div>
 </div>
@@ -130,11 +130,11 @@
 </div>
 <div class="flex flex-col gap-1.5">
 <p class="text-white text-lg font-bold leading-tight group-hover:text-[var(--primary-color)] transition-colors">
-                    Exclusive Interview: Coach Bennett Shares Insights on Team's Progress
-                  </p>
+Exclusive Interview: Coach Bennett Shares Insights on Team's Progress
+ </p>
 <p class="text-gray-400 text-base font-normal leading-normal">
-                    A candid conversation with Coach Bennett, discussing the team's recent performance, challenges faced, and future aspirations.
-                  </p>
+ A candid conversation with Coach Bennett, discussing the team's recent performance, challenges faced, and future aspirations.
+ </p>
 </div>
 </div>
 <div class="flex flex-col gap-4 group">
@@ -150,11 +150,11 @@
 </div>
 <div class="flex flex-col gap-1.5">
 <p class="text-white text-base font-bold leading-tight group-hover:text-[var(--primary-color)] transition-colors">
-                    Fan Reactions: What Supporters Are Saying
-                  </p>
+Fan Reactions: What Supporters Are Saying
+ </p>
 <p class="text-gray-400 text-sm font-normal leading-normal">
-                    A compilation of fan comments and reactions from social media.
-                  </p>
+ A compilation of fan comments and reactions from social media.
+ </p>
 </div>
 </div>
 <div class="flex flex-col gap-4 group">
@@ -170,11 +170,11 @@
 </div>
 <div class="flex flex-col gap-1.5">
 <p class="text-white text-base font-bold leading-tight group-hover:text-[var(--primary-color)] transition-colors">
-                    Historical Moments: Greatest Upsets
-                  </p>
+ Historical Moments: Greatest Upsets
+ </p>
 <p class="text-gray-400 text-sm font-normal leading-normal">
-                    A nostalgic look back at some of the most memorable underdog victories.
-                  </p>
+A nostalgic look back at some of the most memorable underdog victories.
+ </p>
 </div>
 </div>
 </div>
@@ -182,5 +182,5 @@
 </main>
 </div>
 </div>
-
-</body></html>
+</body>
+</html>
