--- a/match.html.html
+++ b/match.html.html
@@ -1,16 +1,18 @@
-<html><head>
+<!DOCTYPE html>
+<html>
+<head>
 <meta charset="utf-8"/>
 <link crossorigin="" href="https://fonts.gstatic.com/" rel="preconnect"/>
-<link as="style" href="https://fonts.googleapis.com/css2?display=swap&amp;family=Manrope%3Awght%40400%3B500%3B700%3B800&amp;family=Noto+Sans%3Awght%40400%3B500%3B700%3B900" onload="this.rel='stylesheet'" rel="stylesheet"/>
+<link as="style" href="https://fonts.googleapis.com/css2?display=swap&family=Manrope%3Awght%40400%3B500%3B700%3B800&family=Noto+Sans%3Awght%40400%3B500%3B700%3B900" onload="this.rel='stylesheet'" rel="stylesheet"/>
 <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet"/>
 <title>Stitch Design</title>
 <link href="data:image/x-icon;base64," rel="icon" type="image/x-icon"/>
 <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
 <style type="text/tailwindcss">
-      :root {
-        --primary-color: #53d22d;
-      }
-    </style>
+:root {
+--primary-color: #53d22d;
+}
+</style>
 </head>
 <body class="bg-[#162013] font-sans">
 <div class="relative flex size-full min-h-screen flex-col dark group/design-root overflow-x-hidden" style='font-family: Manrope, "Noto Sans", sans-serif;'>
@@ -54,23 +56,23 @@
 </div>
 <div class="border-b border-[#426039] mb-8">
 <nav class="flex gap-8">
-<a class="flex flex-col items-center justify-center border-b-2 border-b-[var(--primary-color)] pb-3 pt-1 text-white" href="#">
+<a class="flex flex-col items-center justify-center border-b-2 border-b-[var(--primary-color)] pb-3 pt-1 text-white" href="#overview">
 <p class="text-base font-bold">Overview</p>
 </a>
-<a class="flex flex-col items-center justify-center border-b-2 border-b-transparent pb-3 pt-1 text-[#A2C398] hover:text-white hover:border-b-white transition-colors" href="#">
+<a class="flex flex-col items-center justify-center border-b-2 border-b-transparent pb-3 pt-1 text-[#A2C398] hover:text-white hover:border-b-white transition-colors" href="#lineups">
 <p class="text-base font-bold">Lineups</p>
 </a>
-<a class="flex flex-col items-center justify-center border-b-2 border-b-transparent pb-3 pt-1 text-[#A2C398] hover:text-white hover:border-b-white transition-colors" href="#">
+<a class="flex flex-col items-center justify-center border-b-2 border-b-transparent pb-3 pt-1 text-[#A2C398] hover:text-white hover:border-b-white transition-colors" href="#stats">
 <p class="text-base font-bold">Stats</p>
 </a>
-<a class="flex flex-col items-center justify-center border-b-2 border-b-transparent pb-3 pt-1 text-[#A2C398] hover:text-white hover:border-b-white transition-colors" href="#">
+<a class="flex flex-col items-center justify-center border-b-2 border-b-transparent pb-3 pt-1 text-[#A2C398] hover:text-white hover:border-b-white transition-colors" href="#commentary">
 <p class="text-base font-bold">Commentary</p>
 </a>
 </nav>
 </div>
 <div class="grid grid-cols-1 lg:grid-cols-3 gap-8">
 <div class="lg:col-span-2">
-<section class="mb-8">
+<section id="overview" class="mb-8">
 <h2 class="text-white text-2xl font-bold mb-4">Live Score</h2>
 <div class="flex items-center justify-center gap-8 rounded-2xl bg-[#2E4328] p-8">
 <div class="flex flex-col items-center gap-4">
@@ -82,7 +84,7 @@
 </div>
 </div>
 </section>
-<section class="mb-8">
+<section id="stats" class="mb-8">
 <h2 class="text-white text-2xl font-bold mb-4">Match Stats</h2>
 <div class="grid grid-cols-2 gap-x-8 gap-y-4 rounded-2xl bg-[#2E4328] p-6">
 <div class="flex justify-between items-center text-lg">
@@ -159,5 +161,5 @@
 </main>
 </div>
 </div>
-
-</body></html>
+</body>
+</html>
