--- a/profile.html.html
+++ b/profile.html.html
@@ -1,23 +1,18 @@
-<html><head>
+<!DOCTYPE html>
+<html>
+<head>
 <link crossorigin="" href="https://fonts.gstatic.com/" rel="preconnect"/>
-<link as="style" href="https://fonts.googleapis.com/css2?display=swap&amp;family=Manrope%3Awght%40400%3B500%3B700%3B800&amp;family=Noto+Sans%3Awght%40400%3B500%3B700%3B900" onload="this.rel='stylesheet'" rel="stylesheet"/>
+<link as="style" href="https://fonts.googleapis.com/css2?display=swap&family=Manrope%3Awght%40400%3B500%3B700%3B800&family=Noto+Sans%3Awght%40400%3B500%3B700%3B900" onload="this.rel='stylesheet'" rel="stylesheet"/>
 <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet"/>
 <meta charset="utf-8"/>
 <title>Stitch Design</title>
 <link href="data:image/x-icon;base64," rel="icon" type="image/x-icon"/>
 <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
 <style type="text/tailwindcss">
-      :root {
-        --primary-color: #53d22d;
-      }
-      .material-symbols-outlined {
-        font-variation-settings:
-        'FILL' 0,
-        'wght' 400,
-        'GRAD' 0,
-        'opsz' 24
-      }
-    </style>
+ :root {
+--primary-color: #53d22d;
+}
+</style>
 </head>
 <body class="bg-[#121810]">
 <div class="relative flex size-full min-h-screen flex-col dark group/design-root" style='font-family: Manrope, "Noto Sans", sans-serif;'>
@@ -28,23 +23,19 @@
 <h1 class="text-white text-lg font-bold">Sports Hub</h1>
 </div>
 <nav class="flex flex-col gap-2 flex-grow">
-<a class="... transition-colors" href="index.html">
+<a class="flex items-center gap-3 px-4 py-2 text-zinc-300 hover:text-white hover:bg-[#2e4328]/50 rounded-full transition-colors" href="index.html">
 <span class="material-symbols-outlined">home</span>
 <span class="text-sm font-medium">Home</span>
 </a>
-<a class="... transition-colors" href="match.html">
+<a class="flex items-center gap-3 px-4 py-2 text-zinc-300 hover:text-white hover:bg-[#2e4328]/50 rounded-full transition-colors" href="match.html">
 <span class="material-symbols-outlined">sports_esports</span>
 <span class="text-sm font-medium">Matches</span>
 </a>
-<a class="... transition-colors" href="teams.html">
-<span class="material-symbols-outlined">groups</span>
-<span class="text-sm font-medium">Teams</span>
-</a>
-<a class="... transition-colors" href="news.html">
+<a class="flex items-center gap-3 px-4 py-2 text-zinc-300 hover:text-white hover:bg-[#2e4328]/50 rounded-full transition-colors" href="news.html">
 <span class="material-symbols-outlined">newspaper</span>
 <span class="text-sm font-medium">News</span>
 </a>
-<a class="... rounded-full" href="settings.html">
+<a class="flex items-center gap-3 px-4 py-2 text-white bg-[var(--primary-color)] rounded-full" href="profile.html">
 <span class="material-symbols-outlined" style="font-variation-settings: 'FILL' 1;">settings</span>
 <span class="text-sm font-medium">Settings</span>
 </a>
@@ -137,4 +128,5 @@
 </main>
 </div>
 </div>
-</body></html>
+</body>
+</html>
